# cpptemplate

./: .env  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.json  vcpkg.json
cmake/: BuildConfig.cmake  LinkerSettings.cmake  LocalSet.cmake  Options.cmake  Packages.cmake  Targets.cmake  Vcpkg.cmake  VcpkgInstall.cmake
docker/: Dockerfile.build  Dockerfile.save
docs/: installs.md
include/: lib.hpp
src/: CMakeLists.txt  lib.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
